--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,42 +1,48 @@
 <div class='container'>
 <div class='row'>
-<div class='col-xs-12 text-center" id='top-bar'>
+<div class='col-xs-12 text-center' id='top-bar'>
 <h1>Hamburgesas!</h1>
 </div>
 <div class='col-xs-6 text-center' class='task'>
 	<div class='row'>
 		{{#each burger_data}}
-		{{#unless this devoured}}
+			{{#unless this devoured}}
 		<div class='col-xs-9 text-center'>
 			<pre>{{this.id}}. {{this.burger_name}}</pre>
 		</div>
 		<div class='col-xs-3 text-center'>
 			<form methods='POST' action='/burgers/update?_method=PUT'
 			class='button-size'>
-			<input type='hidden' name='burger_id' type='text'
-			value={{this.id}}>
-			<br>
-			<button type='submit' class='btn btn-default'>
-			DEVORALA!</button>
+				<input type='hidden' name='burger_id' type='text'
+				value={{this.id}}>
+				<br>
+				<button type='submit' class='btn btn-default'>
+				DEVORALA!</button>
 			</form>
-			</div>
+		</div>
 			{{/unless}}
 	   		{{/each}}
 			</div>
 		</div>
-			<div class="col-xs-6 text-center"class='task'>
+			<div class="col-xs-6 text-center"class="task">
 				{{#each burger_data}}
-				{{#if this-devoured}}
+					{{#if this.devoured}}
 				<input class='form-control' type='text' placeholder="{{this.id}}. {{this.burger_name}}" readonly>
 			{{/if}}
 			{{/each}}
 
+		</div>
 	</div>
-</div>
 
 </div>
-
- 
-
-
- 
+<div class="container">
+		<div class="row">
+			<div class="col-xs-12 text-center enter_section">
+			<form action+"/burgers/create"method="POST">
+			<input type="text" name="burger_name" class="form-control" value=""id="enter_text">
+			<button type="submit" class="btn btn-primary"id="text-enter-button">SUBMIT</button>
+		</form>	 
+		<p> Entrar la hamburgesa que deseas comer!</p> 
+		</div>
+ 	</div>
+ </div>	
